<resources>
    <string name="app_name">Steampunked</string>

    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="title_activity_game_live">GameLiveActivity</string>
    <string name="title_register">RegisterActivity</string>

    <!-- Main Menu-->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="splash">Steampunked Splash</string>

    <!-- Login dlg -->
    <string name="remember_me">Remember Me</string>
    <string name="login_fail">Login Failed!</string>
    <string name="login_failed_empty">Login failed: username or password is empty</string>

    <!-- Register dlg -->
    <string name="confirm_password">Confirm Password:</string>
    <string name="register_title">Registration Info</string>
    <string name="register_success">Register Successful!</string>
    <string name="register_fail">Registration Failed!</string>
    <string name="register_failed_confirm">Registration failed: passwords don\'t match</string>
    <string name="register_failed_empty">Registration failed: username or password is empty</string>

    <!-- Create Game dlg -->
    <string name="game_name_label">Game Name:</string>
    <string name="create_game_fail">Failed to create game</string>

    <!-- How to play dlg -->
    <string name="how_to_play">How To Play</string>
    <string name="how_to_play_dlg_title">How To Play!!!</string>
    <string name="gamerules"> In order to play this game you have to register and login in with the username and password that you registered. Once you successfully login, you will be taken to the Lobby where you will be able to see a list of players that are already waiting for you to join their game. If their are no available games you have the ability to create a game and wait for another user to join your game. Once a user joins your game, you will
        receive a push notification, notifying you that a user has joined and you will be moved into the game.  The object of the game is to place a pipe that will connect a steam source to a steam engine so it can power your airship.
        \nOf course, you want to do this before your opponent does. You will recieve a push notification every time the other player makes a move.
        \nThe winner is the first one to connect steam to their engine with no leaks and turn on the valve.</string>

    <!-- Lobby -->
    <string name="five_grid">5 x 5</string>
    <string name="ten_grid">10 x 10</string>
    <string name="twenty_grid">20 x 20</string>
    <string name="create_game">Create Game</string>
    <string name="game_flavor">GameThumbnail</string>
    <string name="catalog_fail">Failed to load game catalog</string>
    <string name="game_created_warning">An open game is already available</string>

    <!-- Game Live -->
    <string name="surrender_button">Surrender</string>
    <string name="install_button">Install</string>
    <string name="discard_button">Discard</string>
    <string name="open_valve_button">Open Valve</string>
    <string name="rotate_button">Rotate</string>

    <!-- Game Over -->
    <string name="game_over">Game Over Man!</string>
    <string name="game_over_new_game">New Game</string>
    <string name="game_over_main_menu">Main Menu</string>
    <string name="waiting">Dummy User Waiting</string>
    <string name="title_activity_lobby">LobbyActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- loading -->
    <string name="loading_create_game">Creating Game..</string>
    <string name="loading_login">Logging In..</string>
    <string name="loading_catalog">Loading Catalog..</string>
    <string name="registering_user">Registering..</string>
    <string name="waiting_dlg">Waiting For Opponent..</string>
    <string name="waiting_for_move_dlg">Waiting For Opponent To Move..</string>
</resources>
