<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <ImageView
        android:id="@+id/imageMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/splash"
        android:focusable="false"
        android:src="@drawable/splash" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/howToPlayButton"
        android:layout_alignRight="@+id/howToPlayButton"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onRegister"
        android:text="@string/register" />

    <Button
        android:id="@+id/howToPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:onClick="onHowToPlay"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/how_to_play" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/howToPlayButton"
        android:layout_alignRight="@+id/howToPlayButton"
        android:layout_below="@+id/imageMainMenu"
        android:layout_marginTop="20dp"
        android:onClick="onLogin"
        android:text="@string/login" />

</RelativeLayout>
