<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.msu.chuppthe.steampunked.GameOverActivity">

    <TextView
        android:id="@+id/gameOverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mainMenuButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mainMenuButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="133dp"
        android:onClick="onNewGame"
        android:text="@string/game_over_new_game" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/newGameButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:onClick="onMainMenu"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/game_over_main_menu" />

</RelativeLayout>
