<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginUsernameText"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/loginUsernameText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/username_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/loginUsernameText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/loginUsernameLabel"
        android:layout_toRightOf="@+id/loginUsernameLabel"
        android:inputType="text" />

    <TextView
        android:id="@+id/loginPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginPasswordText"
        android:layout_alignEnd="@+id/loginUsernameLabel"
        android:layout_alignRight="@+id/loginUsernameLabel"
        android:layout_alignTop="@+id/loginPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/loginPasswordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUsernameText"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/loginUsernameLabel"
        android:layout_toRightOf="@+id/loginUsernameLabel"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/rememberMeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPasswordText"
        android:layout_centerHorizontal="true"
        android:text="@string/remember_me" />

</RelativeLayout>