<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_label"
        android:id="@+id/registerUsernameLabel"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/registerUsernameText"
        android:layout_alignBottom="@+id/registerUsernameText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerUsernameText"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/registerUsernameLabel"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_label"
        android:id="@+id/registerPasswordLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignTop="@+id/registerPasswordText"
        android:layout_alignBottom="@+id/registerPasswordText"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/registerUsernameText"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/registerPasswordLabel" />

    <TextView
        android:id="@+id/registerConfirmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignTop="@+id/registerConfirmText"
        android:layout_alignBottom="@+id/registerConfirmText"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/registerConfirmText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_toRightOf="@+id/registerConfirmLabel"
        android:layout_below="@+id/registerPasswordText"
        android:layout_marginRight="10dp" />
</RelativeLayout>